# kuafu-llm-infra

./: .gitignore  LICENSE  README.md  grafana-dashboard.json  pyproject.toml
docs/: fallback-scoring-mechanism.md  scoring-flow.html
examples/: config.json  llm_stability.yaml
kuafu_llm_infra/: __init__.py  gateway.py  logging_setup.py  types.py
kuafu_llm_infra/alert/: __init__.py  dispatcher.py  rules.py
kuafu_llm_infra/alert/channels/: __init__.py  base.py  feishu.py  log.py  webhook.py
kuafu_llm_infra/config/: __init__.py  loader.py  schema.py  watcher.py
kuafu_llm_infra/fallback/: __init__.py  engine.py  health_checker.py  recorder.py  scorer.py  stream_monitor.py
kuafu_llm_infra/fallback/strategies/: __init__.py  base.py  chunk_gap.py  empty_frame.py  registry.py  slow_speed.py  total_timeout.py  ttft_timeout.py
kuafu_llm_infra/metrics/: __init__.py  collector.py  prometheus.py  registry.py  simple.py
kuafu_llm_infra/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py  registry.py
kuafu_llm_infra/recording/: __init__.py  base.py  clickhouse.py  dispatcher.py
kuafu_llm_infra/state/: __init__.py  backend.py  memory.py  redis.py
sql/: clickhouse_create_table.sql
